Added Talks section to web cv

--- a/_includes/resume/volunteer.liquid
+++ b/_includes/resume/volunteer.liquid
@@ -9,6 +9,8 @@
             {% assign endDate = content.endDate | split: '-' | slice: 0, 2 | join: '.' | default: 'Present' %}
             {% assign date = startDate | append: ' - ' %}
             {% assign date = date | append: endDate %}
+          {% elsif content.date %}
+            {% assign date = content.date | split: '-' | join: '.' %}
           {% else %}
             {% assign date = '' %}
           {% endif %}
