--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -107,6 +107,8 @@ layout: default
                   {% include resume/skills.liquid %}
                 {% when 'publications' %}
                   {% include resume/publications.liquid %}
+                {% when 'talks' %}
+                  {% include resume/talks.liquid %}
                 {% when 'languages' %}
                   {% include resume/languages.liquid %}
                 {% when 'interests' %}
