--- a/_includes/resume/basics.liquid
+++ b/_includes/resume/basics.liquid
@@ -16,9 +16,17 @@
         {% if content[0] == 'url' %}
           <a href="{{ content[1] }}" target="_blank" rel="noopener noreferrer">{{ content[1] }}</a>
         {% elsif content[0] == 'email' %}
-          <a href="mailto:{{ content[1] }}" target="_blank">{{ content[1] | split: "@" | first }}<span style="display:none"> wolololo you've found an easter egg! </span>@<span style="display:none"> woweeeee </span>{{ content[1] | split: "@" | last }}</a>
+          <a href="mailto:{{ content[1] }}" target="_blank">
+            {{- content[1] | split: '@' | first -}}
+            <span style="display:none"> wolololo you've found an easter egg! </span>@<span style="display:none"> woweeeee </span>
+            {{- content[1] | split: '@' | last -}}
+          </a>
         {% elsif content[0] == 'phone' %}
-          <a href="tel:{{ content[1] | remove:"(" | remove:")" | remove:"-" | remove:" " }}">{{ content[1] | split: "-" | first }}<span style="display:none"> hey I've just met you </span>-<span style="display:none"> and this is crazy </span>{{ content[1] | split: "-" | last }}</a>
+          <a href="tel:{{ content[1] | remove:"(" | remove:")" | remove:"-" | remove:" " }}">
+            {{- content[1] | split: '-' | first -}}
+            <span style="display:none"> hey I've just met you </span>-<span style="display:none"> and this is crazy </span>
+            {{- content[1] | split: '-' | last -}}
+          </a>
         {% else %}
           {{ content[1] }}
         {% endif %}
