Added zbmath to pdf cv and web cv

--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -109,6 +109,8 @@ layout: default
                   {% include resume/publications.liquid %}
                 {% when 'talks' %}
                   {% include resume/talks.liquid %}
+                {% when 'service' %}
+                  {% include resume/service.liquid %}
                 {% when 'languages' %}
                   {% include resume/languages.liquid %}
                 {% when 'interests' %}
