--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -6,6 +6,20 @@ layout: default
     <header class="post-header">
       <h1 class="post-title">
         {{ page.title }}
+        {% if page.research_statement_pdf %}
+          <a
+            {% if page.research_statement_pdf contains '://' %}
+              href="{{ page.research_statement_pdf }}"
+            {% else %}
+              href="{{ page.research_statement_pdf | prepend: 'assets/pdf/' | relative_url }}"
+            {% endif %}
+            target="_blank"
+            rel="noopener noreferrer"
+            class="float-right"
+          >
+            <i class="fa-solid fa-person-chalkboard"></i>
+          </a>
+        {% endif %}
         {% if page.cv_pdf %}
           <a
             {% if page.cv_pdf contains '://' %}
@@ -57,6 +71,20 @@ layout: default
     <header class="post-header">
       <h1 class="post-title">
         {{ page.title }}
+        {% if page.research_statement_pdf %}
+          <a
+            {% if page.research_statement_pdf contains '://' %}
+              href="{{ page.research_statement_pdf }}"
+            {% else %}
+              href="{{ page.research_statement_pdf | prepend: 'assets/pdf/' | relative_url }}"
+            {% endif %}
+            target="_blank"
+            rel="noopener noreferrer"
+            class="float-right"
+          >
+            <i class="fa-solid fa-person-chalkboard"></i>
+          </a>
+        {% endif %}
         {% if page.cv_pdf %}
           <a
             {% if page.cv_pdf contains '://' %}
